--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ data/
 develop-eggs/
 downloads/
 eggs/
-lib/
+# lib/ - commented out because it was ignoring frontend/src/lib
 lib64/
 parts/
 sdist/
