--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,24 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+      # Use http://ollama:11434 for the internal container-based Ollama
+      # Use http://host.docker.internal:11434 for Ollama running on your host machine
+      - OLLAMA_BASE_URL=http://ollama:11434
       - CHROMA_PATH=/app/data/chroma
       - USER_DATA_PATH=/app/data/users
     volumes:
       - ./backend/data:/app/data
+    depends_on:
+      - ollama
     extra_hosts:
       - "host.docker.internal:host-gateway"
+
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
 
   frontend:
     build: ./frontend
@@ -22,3 +33,6 @@ services:
       - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
+
+volumes:
+  ollama_data:
